# pizdec

./: main.py  pyproject.toml  shema.py
alembic/: env.py
alembic/versions/: 2025_07_30_1639-91c085ee6a89_create.py
models/: db.py  note.py
